--- a/frontend/css/Accueil.css
+++ b/frontend/css/Accueil.css
@@ -54,53 +54,15 @@ h2 {
 
     width : 1226px;
     height : 680px;
-    margin-left : 475px;
     max-width : 1300px;
+
 }
 
 #container {
     width : 1500px;
 }
 
-
-.contentFormContact {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-
-}
-
-
-#ongletContact, #ongletReservation {
-    text-align:center;
-}
-
-.photosChambres img {
-    height : 400px;
-
-
-}
-
-.photosChambres .decriChambre{
-    overflow: auto;
-}
-
-
-.photosChambres .bloc1{
-    width: 60%;
-    float: left;
-}
-
-.photosChambres .bloc2{
-    overflow: auto;
-}
-
-.photosChambres label{
-    color: #4682B4;
-    font-size: 30px;
-}
-
-#ongletReservation label { display:inline-block; width:50em; }
-
-#ongletReservation input,textarea { display:inline-block; }
+p { font-family: 'Molengo', Georgia, Times, serif;
+    color : #4682B4;
+    font-size : 19px;}
 
