--- a/frontend/css/Activitees.css
+++ b/frontend/css/Activitees.css
@@ -1,8 +1,15 @@
+body {
+    background-color : #f1f0ee;
+}
 
 h1 {
     text-align : center;
     color : #4682B4;
     font-family: 'Molengo', Georgia, Times, serif;
+}
+
+h2 {
+    text-align : center;
 }
 
 a{
@@ -12,27 +19,30 @@ a{
 
 }
 
-body {
-    background-color : #f1f0ee;
-
+p, form, h1 {
+text-align : center;
 }
 
-input[type=text]{
-    width: 60%;
+
+th, td {
+    padding : 15px;
+}
+
+
+input[type=text], input[type=number], select{
+    width: 20%;
     padding: 15px;
     border: 2px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
     margin-top: 10px;
     margin-bottom: 15px;
-    resize: vertical;
-
 }
 
 input[type=submit] {
     background-color: #4CAF50;
     color: white;
-    padding: 12px 20px;
+    padding: 12px;
     border-radius: 4px;
 
 }
@@ -42,25 +52,24 @@ input[type=submit]:hover {
 }
 
 
-h2 {
+td img{
+    width : 400px;
+}
+
+
+td {
     text-align : center;
 }
 
-
-.imgResto {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-
-    max-width: 100%;
-    height: auto;
+th {
+    color : #228B22;
 }
 
-.menuResto{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
 
-    max-width: 40%;
-    height: auto;
+#affichageTable {
+
+    background-color : #FFEBCD;
+    width : 100%;
+    border : solid grey 10px;
+
 }
