--- a/frontend/css/Reservation.css
+++ b/frontend/css/Reservation.css
@@ -1,4 +1,3 @@
-
 h1 {
     text-align : center;
     color : #4682B4;
@@ -11,13 +10,12 @@ a{
     text-decoration : none;
 
 }
-
 body {
     background-color : #f1f0ee;
 
 }
 
-input[type=text]{
+input[type=text], input[type=email], select, [type=date] {
     width: 60%;
     padding: 15px;
     border: 2px solid #ccc;
@@ -42,25 +40,19 @@ input[type=submit]:hover {
 }
 
 
+
 h2 {
     text-align : center;
 }
 
 
-.imgResto {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-
-    max-width: 100%;
-    height: auto;
+#ongletReservation {
+    text-align:center;
 }
 
-.menuResto{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
 
-    max-width: 40%;
-    height: auto;
-}
+
+#ongletReservation label { display:inline-block; width:50em; }
+
+#ongletReservation input { display:inline-block; }
+
